<resources>
    <string name="app_name" translatable="false">Pin my Balls</string>
    <string name="mailContact" translatable="false">flipper.finder2@gmail.com</string>
    <string name="parseApplicationId" translatable="false">wx8ZJI9628FDGq39REy6rMlZjKdP5ERUMXjZpqjE</string>
    <string name="parseClientKey" translatable="false">8JRUbCxEjJjkSXG00B5csXzAl1E9BWHVIABKvFqy</string>
    <string name="parseServerUrl" translatable="false">https://parseapi.back4app.com/</string>
    <string name="searchByNumberResultFlipID" translatable="false">FlipID</string>
    <string name="searchByNumberResultFlipEnseigneID" translatable="false">FlipEnseigneID</string>
    <string name="searchByNumberResultFlipEnseigne" translatable="false">FlipEnseigne</string>
    <string name="searchByNumberResultFlipEnseigneAdresse" translatable="false">FlipAdresse</string>
    <string name="searchByNumberResultFlipEnseigneVille" translatable="false">FlipVille</string>
    <string name="searchByNumberResultFlipModelID" translatable="false">FlipModeleID</string>
    <string name="searchByNumberResultFlipModel" translatable="false">FlipModele</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="place_details" translatable="false">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="BoutonAccueilRechercher">Search pinball</string>
    <string name="BoutonAccueilSignaler">Report a pinball</string>
    <string name="HeaderTournois">Tournaments and Events</string>
    <string name="BoutonAccueilCommentaire">Browse latest comments</string>
    <string name="editText">Edit</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Home page</string>
    <string name="title_activity_pageListeResultat">Results list page</string>
    <string name="BoutonAccueilMaj">Update database</string>
    <string name="hintFiltreModele">Filter by model</string>
    <string name="title_activity_pageCarteFlipper">Location of pinballs</string>
    <string name="alt_image_localisation">Location</string>
    <string name="alt_image_mapsearch">Locate on map</string>
    <string name="searchthisareatext">List of pinballs in circle</string>
    <string name="hintRechercheAdresse">Address, postcode and city</string>
    <string name="BoutonAfficheListeFlipper">Display pinballs on map</string>
    <string name="SectionAdresse">Address</string>
    <string name="SectionFlipper">Machine name</string>
    <string name="SectionNomEnseigne">Location name</string>
    <string name="SectionTournoi">Event name</string>
    <string name="SectionDateTournoi">Date</string>
    <string name="SectionURLTournoi">Event website</string>
    <string name="SectionCodePostal">Postcode</string>
    <string name="SectionVille">City</string>
    <string name="SectionPays">Country</string>
    <string name="BoutonSoumettre">Submit</string>
    <string name="hintSoumettreAdresse">Enter complete address</string>
    <string name="BoutonEnvoiInfosFlipper">Send</string>
    <string name="BoutonEnvoiInfosFlipperMail">Send by email</string>
    <string name="SectionFacultatif">(Optional)</string>
    <string name="SectionPref">User alias</string>
    <string name="SectionPrefRayonRecherche">Search radius</string>
    <string name="SectionPrefNbResultatVisible">Max displayed pinballs</string>
    <string name="BoutonPrefMaj">Update database</string>
    <string name="SignalementDeuxiemeModele">Second pinball</string>
    <string name="SignalementTroisiemeModele">Third pinball</string>
    <string name="SignalementQuatriemeModele">Fourth pinball</string>
    <string name="SignalementCinquiemeModele">Fifth pinball</string>
    <string name="SignalementWizardNext">Next</string>
    <string name="SignalementWizardPrevious">Previous</string>
    <string name="SignalementWizardCancel">Cancel</string>
    <string name="SignalementWizardFinish">Send</string>
    <string name="SignalementRefreshMap">Geolocate address</string>
    <string name="boutonValidation">This machine is still here!</string>
    <string name="boutonDisparition">This machine was removed</string>
    <string name="boutonChangement">Machine was replaced</string>
    <string name="boutonNavigation">Directions to this venue</string>
    <string name="boutonNouveauFlip">Add machine in venue</string>
    <string name="dateMaj">Updated on:</string>
    <string name="dateMajDefault">Last update unknown</string>
    <string name="SectionPseudo">Initials</string>
    <string name="SectionScore">Your score</string>
    <string name="boutonSoumettreScore">Submit your score</string>
    <string name="boutonCommentaire">Leave a comment</string>
    <string name="boutonNewCommentaire">Send</string>
    <string name="boutonCancel">Cancel</string>
    <string name="toastMajCommentaire">%1$d comment(s) updated.</string>
    <string name="toastMajEnseigne">%1$d venue(s) updated.</string>
    <string name="toastMajFlipper">%1$d pinball(s) updated.</string>
    <string name="listemax">%1$d pinballs</string>
    <string name="rayonmax">%1$d km</string>
    <string name="toastMajModele">%1$d pinball machines updated.</string>
    <string name="toastMajScore">%1$d score(s) added.</string>
    <string name="error_invalid_initials">Minimum 3 initials</string>
    <string name="fulltextCommentaire"><Data><![CDATA[<b>%1$s</b> about a %2$s in %3$s]]> </Data></string>
    <string name="fulltextCommentaire2"><Data><![CDATA[<b>%1$s</b> about the  %2$s at <u>%4$s</u> in %3$s]]> </Data></string>
    <string name="fulltextCommentaire3"><Data><![CDATA[<b>%1$s</b> about the <font color="black">%2$s </font> at <u>%4$s</u> in %3$s]]> </Data></string>
    <string name="fulltextCommentaireAnonyme"><Data><![CDATA[<b>Anonyme</b> about a %1$s à %2$s]]> </Data></string>
    <string name="actifst">actives</string>
    <string name="tab_text_2">Actions</string>
    <string name="legend_orange">Updated less than a month ago</string>
    <string name="legend_red">Updated less then a year ago</string>
    <string name="admin">Admin</string>
    <string name="headerAdmin">Admin tools</string>
    <string name="homeMenu_action_admin_text">Admin tools</string>
    <string name="adresse">Address</string>
    <string name="ajoute_new_model">Add a new machine</string>
    <string name="pseudoCommentaireAnonyme">Anonymous</string>
    <string name="dialogMajDBNeededOK">Sure !</string>
    <string name="tab_text_3">Comment</string>
    <string name="homeMenu_action_bug_text">Bugs</string>
    <string name="error_field_required">Required Field</string>
    <string name="dialogMajDBMEssage">Loading update</string>
    <string name="pick_place">Choose a place</string>
    <string name="hintCommentaireNew">Comments on this new machine</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="currentlatng_text">Coordinates</string>
    <string name="action_sign_up">Create account</string>
    <string name="title_activity_signup">Create an account</string>
    <string name="account_create">Create your account</string>
    <string name="title_activity_maps">Curretn place details</string>
    <string name="DateLastMaj">Last update date</string>
    <string name="default_info_title">Default Location</string>
    <string name="headerCommentaire">Last comments</string>
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="enseigne">Venue</string>
    <string name="dialogtitleNewScore">Enter a new score</string>
    <string name="reset_instructions">Enter your email to reset your password</string>
    <string name="etat">State</string>
    <string name="homeMenu_action_email">Feedback</string>
    <string name="toastFlipAlreadyDeleted">Pinball already deactivated</string>
    <string name="ajout_default_comment">Additional machine</string>
    <string name="option_get_place">Get place</string>
    <string name="searchByNumberButtonTitle">Go</string>
    <string name="tab_text_4">High score</string>
    <string name="toastValidationPasPossibleReseau">You must be connected to internet to confirm machine.</string>
    <string name="toastAjouteCommentairePasPossibleReseau">You must be connected to internet to send a comment.</string>
    <string name="toastAjouteScorePasPossibleReseau">You must be connected to internet to send a score.</string>
    <string name="toastChangeModelePasPossibleReseau">You must be connected to internet to update a machine.</string>
    <string name="tab_text_1">Info</string>
    <string name="prompt_initials">Initials</string>
    <string name="toastAjouteCommentaireCloudKO">Comment transmission failed.</string>
    <string name="toastAjouteScoreCloudKO">Score transmission failed.</string>
    <string name="toastMajEchec">Update failed. Database reset.</string>
    <string name="selected_place">Last Selected Place</string>
    <string name="toastValidationCloudOK">Update acknoledged. Thanks!</string>
    <string name="toastValidationCloudKO">Update failed.</string>
    <string name="changement_default_comment">The %1$s has been replaced</string>
    <string name="popupChangementFlipKO">Change of state of pinball failed.</string>
    <string name="popupChangementFlipOK">Change of state of pinball successful. Thanks.</string>
    <string name="popupChangementModeleKO">Change of state failed.</string>
    <string name="popupChangementModeleOK">Change of state acknowledged. Thanks.</string>
    <string name="homeMenu_action_legend_text">Legend</string>
    <string name="hintNouveauModele">The new machine</string>
    <string name="popupRetraitFlipOK">Removal of pinball acknoledged. Thanks.</string>
    <string name="popupRetraitFlipKO">Removal of pinball failed.</string>
    <string name="liste_modeles">List of machines</string>
    <string name="dialogMajDBTitle">Update</string>
    <string name="homeMenu_action_DBupdate_text">Update</string>
    <string name="model">Machine</string>
    <string name="hintPseudo">Initials</string>
    <string name="myaction_button2">Search OPDB</string>
    <string name="saveButton">Update</string>
    <string name="title_tournoi">Tournaments</string>
    <string name="title_actus">News</string>
    <string name="title_carte">Map</string>
    <string name="title_liste">List</string>
    <string name="title_nouveau">New</string>
    <string name="defaultcommment_nouveau">New !</string>
    <string name="texte_exploitant">Operator (optional)</string>
    <string name="nbcredits">Credits for 2 euros</string>
    <string name="myaction_button">TestActivity</string>
    <string name="icon1_playstore_desc">Playstore icon</string>
    <string name="icon4_apple_desc">App Store icon</string>
    <string name="icon2_fb">FB icon</string>
    <string name="icon3_chrome_desc">Chrome browser icon</string>
    <string name="message1"><b>PinMyBalls</b> devient <b>Insert Coin</b> grâce à Simon, à qui je passe la main sur le développement de l\'application.</string>
    <string name="message2"><b>Ce qui change :</b> nouveau nom, nouvelle interface, applis iOS, Android, web et des mises à jour régulières</string>
    <string name="message3"><b>Ce qui reste :</b> vos fonctionnalités et vos flippers préférés.</string>
    <string name="message5">À très bientôt dans <b>Insert Coin</b> ! 🚀\nBon flip\n\nJulien</string>
    <string name="message4">📲 Cliquez sur les liens ci-dessous pour découvrir les nouveautés ! \nrelease Android : 10 sept / iOS : dispo</string>
</resources>