<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_tournaments"
        android:enabled="true"
        android:icon="@drawable/ic_trophy_black_24dp"
        android:title="@string/title_tournoi">
    </item>

    <item
        android:id="@+id/ic_comments"
        android:enabled="true"
        android:icon="@drawable/ic_comment_black_24dp"
        android:title="@string/title_actus">
    </item>


    <item
        android:id="@+id/ic_map"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_carte">
    </item>

    <item
        android:id="@+id/ic_list"
        android:enabled="true"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/title_liste">
    </item>

    <item
        android:id="@+id/ic_add"
        android:enabled="true"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/title_nouveau">
    </item>


</menu>