<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Message Title -->
    <TextView
        android:id="@+id/dialog_message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:text="📢 PinMyBalls évolue ! 🎉"
        android:textAlignment="center"
        android:gravity="center_horizontal"

        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Message Content -->
    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/message1"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/message2"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/message3"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/message4"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="16sp" />



    <!-- Icon section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_playstore"
            android:contentDescription="@string/icon1_playstore_desc"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_icons_fb"
            android:contentDescription="@string/icon2_fb"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/icon3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_chrome"
            android:contentDescription="@string/icon3_chrome_desc"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/icon4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_apple"
            android:contentDescription="@string/icon4_apple_desc"
            android:layout_margin="8dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/message5"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="16sp" />

</LinearLayout>