<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

		<AutoCompleteTextView
			android:id="@+id/autocompletionModeleFlipper"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="15dip"
			android:imeOptions="actionDone"
			android:inputType="textFilter|textNoSuggestions"
			android:singleLine="true"
			android:hint="@string/SectionFlipper"/>

		<EditText
			android:id="@+id/champNomEnseigne"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:layout_marginTop="15dip"
			android:inputType="textFilter|textNoSuggestions"
			android:hint="@string/SectionNomEnseigne"/>


		<EditText
			android:id="@+id/champExploitant2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="15dip"
			android:layout_marginRight="5dip"
			android:hint="@string/texte_exploitant"
			android:imeOptions="actionDone|normal"
			android:inputType="textCapSentences|textMultiLine"
			/>

		<EditText
			android:id="@+id/champNbCredits2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginRight="5dip"
			android:hint="@string/nbcredits"
			android:imeOptions="actionDone|normal"
			android:inputType="numberSigned" />

		<include layout="@layout/localisationsignalement" />

	    <Button
	        android:id="@+id/BoutonEnvoiInfosFlipper"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
	        android:text="@string/BoutonEnvoiInfosFlipperMail"
            android:layout_marginEnd="20dp" />

	</LinearLayout>
</ScrollView>
