<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    tools:context=".PreferencesActivity"
    android:paddingStart="8dp">


    <LinearLayout
        android:id="@+id/searchbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="3dp"
            android:layout_weight="5">


            <EditText
                android:id="@+id/searchByNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Flipper Id"
                android:ems="10"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/boutonClearNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:background="@null"
                android:contentDescription="Clear"
                app:srcCompat="@drawable/ic_clear_black_24dp" />

        </FrameLayout>

        <ImageButton
            android:id="@+id/pasteClipboardImagebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="Paste"

            app:srcCompat="@drawable/ic_content_paste_black_24dp" />

        <ImageButton
            android:id="@+id/searchbynumberImagebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="Search"

            app:srcCompat="@drawable/ic_search_black_24dp" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="48dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="60dp"
            android:layout_height="17dp"
            android:layout_marginLeft="16dp"
            android:text="FlipID"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/searchbynumberResultFlipID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/searchByNumberResultFlipID"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintLeft_toRightOf="@+id/textView"
            android:layout_marginStart="8dp"
            android:gravity="start" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/model"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/searchbynumberResultFlipModeleID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="3"
            android:text="@string/searchByNumberResultFlipModelID"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintLeft_toRightOf="@+id/textView2"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/searchbynumberResultFlipModele"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/searchByNumberResultFlipModel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBaseline_toBaselineOf="@+id/searchbynumberResultFlipModeleID"
            app:layout_constraintLeft_toRightOf="@+id/searchbynumberResultFlipModeleID"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/enseigne"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/searchbynumberResultFlipEnseigneID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="3"
            android:text="@string/searchByNumberResultFlipEnseigneID"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/searchbynumberResultFlipEnseigne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/searchByNumberResultFlipEnseigne"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBaseline_toBaselineOf="@+id/searchbynumberResultFlipEnseigneID"
            app:layout_constraintLeft_toRightOf="@+id/searchbynumberResultFlipEnseigneID"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/adresse"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/searchbynumberResultFlipEnseigneAdresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="6"
            android:text="@string/searchByNumberResultFlipEnseigneAdresse"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintLeft_toRightOf="@+id/textView4"
            android:layout_marginStart="8dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/actifToggle"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/etat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/actifState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="4"
            android:text="@string/actifst"
            app:layout_constraintBaseline_toBaselineOf="@+id/actifToggle"
            app:layout_constraintLeft_toRightOf="@+id/actifToggle"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="8dp"
            android:text="@string/saveButton"
            app:layout_constraintStart_toEndOf="@+id/actifToggle"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/listDivider" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/MyAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@color/warning"
            android:text="@string/myaction_button" />

        <Button
            android:id="@+id/MyAction2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"

            android:background="@color/accent"
            android:text="@string/myaction_button2" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter query"/>

    <TextView
        android:id="@+id/query_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:textSize="16sp"/>


</LinearLayout>


